# cat-merge

./: .gitignore  Makefile  README.md  mkdocs.yaml  pyproject.toml  test.py  test_database_save.py  test_duckdb_conversion.py  test_graph_stats.py  test_multivalued_fields.py  test_persistent_database_rerun.py  test_provided_by_consistency.py  test_provided_by_fix.py
.github/workflows/: publish.yml  test.yml
cat_merge/: cat_merge.py  cli.py  duckdb_merge.py  duckdb_qc.py  duckdb_utils.py  file_utils.py  mapping_utils.py  merge.py  merge_utils.py  qc.py  qc_diff_utils.py  qc_report.py  qc_stats.py  qc_utils.py  qc_utils_functions.py  schema_utils.py  tar_utils.py
cat_merge/cli/: cli.py
cat_merge/model/: merged_kg.py
cat_merge/qc_stats/: qc_stats_gen.py
cat_merge/utils/: file.py  merge.py
src/cat_merge/: cli.py  mapping_utils.py  merge.py  merge_utils.py  qc.py  qc_utils.py
src/cat_merge/model/: merged_kg.py
tests/: conftest.py  test_cat_merge.py  test_diff_utils.py  test_utils.py
tests/fixtures/: edges.py  nodes.py
tests/integration/: test_merge.py
tests/test_data/: test_kg_edges.tsv  test_kg_nodes.tsv
tests/test_data/expected/: test_create_edge_report_expected.yaml  test_create_edges_report_expected_dict.yaml  test_create_edges_report_expected_list.yaml  test_create_qc_report_expected_dict.yaml  test_create_qc_report_expected_list.yaml
tests/unit/: test_ReportContainer.py  test_apply_mappings.py  test_clean_edges.py  test_clean_nodes.py  test_col_to_yaml.py  test_concat_dataframe.py  test_diff_dict.py  test_diff_int.py  test_diff_list.py  test_diff_str.py  test_diff_type.py  test_get_dangling_edges.py  test_get_difference.py  test_get_duplicate_rows.py  test_get_duplicates_by_id.py  test_get_intersection.py  test_get_namespace.py  test_validate_diff_args.py
tests/unit/qc_diff_utils/: test_diff_dict.py  test_diff_str.py  test_get_empty.py  test_sources_dict.py
tests/unit/qc_utils/: test_ReportContainer.py  test_cols_fill_na.py  test_create_edge_node_types_report.py  test_create_edge_report.py  test_create_edges_report.py  test_create_nodes_report.py  test_create_predicate_report.py  test_create_qc_report.py  test_get_missing.py
