[tool.poetry]
name = "cat-merge"
version = "0.1.19"
description = ""
authors = [
    "Monarch Initiative <info@monarchinitiative.org>",
    "Glass Elsarboukh <glass@tislab.org>",
    "Tim Putman <tim@tislab.org>",
    "Kevin Schaper <kevin@tislab.org>",
    "Victoria Soesanto <victoria@tislab.org",
    "Corey Cox <corey@tislab.org>"
]
packages = [
    { include = "cat_merge", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
mkdocs = "^1.3.0"
#grape = "^0.1.24"
scipy = "^1.9.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
typer-cli = "^0.0.13"

[tool.poetry.scripts]
cat-merge = 'cat_merge.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
