[tool.poetry]
name = "cat-merge"
version = "0.2.1"
description = ""
authors = [
    "Monarch Initiative <info@monarchinitiative.org>",
    "Glass Elsarboukh <glass@tislab.org>",
    "Tim Putman <tim@tislab.org>",
    "Kevin Schaper <kevin@tislab.org>",
    "Victoria Soesanto <victoria@tislab.org",
    "Corey Cox <corey@tislab.org>"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
duckdb = ">=1.0.0,<2.0.0"
mkdocs = "^1.3.0"
scipy = ">=1.9,<2.0.0"
linkml-runtime = "^1.7.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
cat-merge = 'cat_merge.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
